fix: jump in in cards, overview in huge screens

--- a/src/components/Place/PlaceList/PlaceList.css
+++ b/src/components/Place/PlaceList/PlaceList.css
@@ -25,3 +25,9 @@
     height: 230px;
   }
 }
+
+@media only screen and (min-width: 1600px) {
+  .place-list__container .ui.card.place-card {
+    width: 100%;
+  }
+}
